<resources>
    <string name="app_name">CDC</string>
    <string name="title_search_info">查询信息</string>
    <string name="title_data_processing">数据处理</string>
    <string name="title_policy_issue">政策发布</string>
    <string name="title_information_submit">信息上报</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_account">Account</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="account_failed">"Account not exists"</string>
    <string name="title_activity_common_user">CommonUserActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="x">X</string>
    <string name="e">E</string>
    <string name="save">√</string>
    <string name="edit">E</string>


</resources>