<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_search_info"/>

    <item
        android:id="@+id/navigation_data_processing"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_data_processing"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_policy_issue"/>
    <item
        android:id="@+id/navigation_information_report"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_information_submit"/>
</menu>