<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/ChangeQuestionnaireContent_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ChangeQuestionnaireContent_delete_button"
        app:layout_constraintStart_toEndOf="@+id/ChangeQuestionnaireContent_edit_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ChangeQuestionnaireContent_save_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:enabled="false"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ChangeQuestionnaireContent_edit_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:enabled="true"
        android:layout_marginStart="4dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ChangeQuestionnaireContent_save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ChangeQuestionnaireContent_delete_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>